# pdns-remotebackend-module

./: .gitignore  0001-Added-remotebackend-for-compile.patch  Makefile.am  OBJECTFILES  OBJECTLIBS  README  README.md  connector.cc  connector.hh  httpconnector.cc  json.hpp  pipeconnector.cc  remotebackend.cc  remotebackend.hh  rev.rb  socketbackend.cc  socketbackend.hh  tcp_connector.cc  tcpconnector.cc  test_backend.rb  udp_connector.cc  unix_connector.cc  unixconnector.cc
regression-tests/: backend.rb  http-backend.rb  pipe-backend.rb  remote.sqlite3  report.txt  start-test-stop  start-test-stop.diff
